[package]
name = "helloworld"
version = "0.1.0-SNAPSHOT"
edition = "2021"
authors = ["Andres Almiray <aalmiray@yahoo.com>"]
description = """
HelloWorld in Rust
"""
documentation = "https://github.com/almiray/helloworld-rustx"
homepage = "https://github.com/almiray/helloworld-rustx"
repository = "https://github.com/aalmiray/helloworld-rustx"
keywords = ["helloworld"]
categories = ["command-line-utilities"]
license = "MIT"
autotests = false
