[package]
name = "helloworld"
version = "1.0.0-SNAPSHOT"
authors = ["Andres Almiray <aalmiray@yahoo.com>"]
description = """
HelloWorld in Rust
"""
documentation = "https://github.com/jreleaser/helloworld-rustx"
homepage = "https://github.com/jreleaser/helloworld-rustx"
repository = "https://github.com/jreleaser/helloworld-rustx"
keywords = ["helloworld"]
categories = ["command-line-utilities"]
license = "MIT"
autotests = false
